css/styles.css
/*Defining General Styles*/

html{
    font-size: 62.5%;
}

body{
    font-size: 1.8rem;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

/*Styles for the navigation bar*/ 
header{
    display: flex;
    background-color: red;
    padding: 0.5rem 2rem;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

nav{
    display: flex;
}

h2{
    color: #fff;
}


ul{
    display: flex;
}


a{
    text-decoration: none;
}



.nav-item {
    color: #fff;
    font-weight: 500;
    margin-right: 4rem;
    transition: scale .2s;
}

.nav-item:hover{
    scale: 1.2;
}


/*Styles for the List of Products*/
.product-container{
    display: grid;
    grid-template-columns: repeat(4, 30rem);
    grid-template-rows: repeat(auto, 30rem);
    row-gap: 10px;
    column-gap: 10px;
    justify-content: center;
    margin-top: 2rem;
}

.box{
    color:#fff;
    width: 200px;
    height: 200px;
    background-color: black;
}

